<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="50dp"
    tools:context="com.example.azeaage.mobileapp.About_Fragment">
    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
            android:layout_width="364dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:orientation="vertical"

            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Maintenance_and_instillation"
    android:textSize="20dp"

    />
   <!-- android:shadowDy="1"
    android:shadowDx="1"  \
    android:layout_centerBorizontal="true"
    android:shadowRadius="2"-->


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/order"
            android:text="@string/Order_Number"
            android:inputType="textPersonName"
            android:layout_marginTop="20dp"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/type"
            android:text="@string/Type_on_Maintenance"
            android:inputType="textPersonName"
            android:layout_marginTop="20dp"
            />
        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/type"
            android:layout_weight="0.14"
            android:entries="@array/Type_on_Maintenance"


            >

        </Spinner>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            android:hint="@string/Date_Of_Maintenance"
            android:inputType="textPersonName"
            android:layout_marginTop="20dp"
            />
        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/type"
            android:entries="@array/Date_Of_Maintenance"



            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            android:hint="@string/Description"
            android:inputType="textPersonName"
            android:layout_marginTop="20dp"
            />
<EditText
    android:id="@+id/edittext"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="textMultiLine"
    android:lines="5"
    />
<Button
    android:id="@+id/button"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:onClick="submit"
    android:text="submit"
    />


    </LinearLayout>
    </ScrollView>

</RelativeLayout>


